--- a/config/ekf.yaml
+++ b/config/ekf.yaml
@@ -77,7 +77,7 @@ ekf_filter_node:
 # odom1, twist0, twist1, imu0, imu1, imu2, etc. The value should be the topic name. These parameters obviously have no
 # default values, and must be specified.
         odom0: diffbot_base_controller/odom
-        pose0: EKF_in_cam
+        pose0: Tag_pose
 
 # Each sensor reading updates some or all of the filter's state. These options give you greater control over which
 # values from each measurement are fed to the filter. For example, if you have an odometry message as input, but only
